[gd_scene load_steps=5 format=3 uid="uid://dv216ldm87tsw"]

[ext_resource type="Script" path="res://Enemy/air_enemy.gd" id="1_puc0p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q7t6q"]
size = Vector2(4.18391, 3.61446)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_512dr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ftkyx"]
size = Vector2(119, 91.5)

[node name="AirEnemy" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_puc0p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.500004, -0.5)
scale = Vector2(21.75, 20.75)
shape = SubResource("RectangleShape2D_q7t6q")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.859284, 0.243229, 1.15514e-06, 1)
position = Vector2(0, -1.19209e-07)
scale = Vector2(91, 75)
texture = SubResource("PlaceholderTexture2D_512dr")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_ftkyx")

[node name="mouthmarker" type="Marker2D" parent="."]
position = Vector2(0, 60)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
